--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "server": "nodemon index.js ",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel index.js -d dist",
     "start": "node server.js"
   },
   "author": "",
@@ -17,5 +18,12 @@
     "express-validator": "^7.0.1",
     "mongoose": "^7.5.2"
   },
-  "description": ""
+  
+  "description": "",
+  "devDependencies": {
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "nodemon": "^3.0.1"
+  }
 }
