--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "server": "nodemon index.js ",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel index.js -d dist",
-    "start": "node server.js"
+    "start": "node server.js",
+    "startServer":"env-cmd -f /etc/secrets/.env node --esm index.js"
   },
   "author": "",
   "license": "ISC",
